recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:1: error: not found: value level
	if (level == 0){
            ^Sierpinski:10: error: value ∕ is not a member of Double
		sierpinski(levels-1, length∕2)
                                           ^